// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly with custom color 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="18px"
    viewBox="0 0 24 24"
    width="18px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.00001 16L4.00001 8L18 8L18 16M20 16.67L20 15L22 15L22 9L20 9L20 7.33C20 6.6 19.4 6 18.67 6L3.33001 6C2.60001 6 2.00001 6.6 2.00001 7.33L2.00001 16.67C2.00001 17.41 2.59001 18 3.33001 18L18.67 18C19.4 18 20 17.4 20 16.67ZM8 15L8 9L5.00001 9L5.00001 15L8 15ZM12.5 15L12.5 9L9.5 9L9.5 15L12.5 15Z"
      fill="var(--base-shades-20)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon renders correctly with custom size 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="18px"
    viewBox="0 0 24 24"
    width="18px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.00001 16L4.00001 8L18 8L18 16M20 16.67L20 15L22 15L22 9L20 9L20 7.33C20 6.6 19.4 6 18.67 6L3.33001 6C2.60001 6 2.00001 6.6 2.00001 7.33L2.00001 16.67C2.00001 17.41 2.59001 18 3.33001 18L18.67 18C19.4 18 20 17.4 20 16.67ZM8 15L8 9L5.00001 9L5.00001 15L8 15ZM12.5 15L12.5 9L9.5 9L9.5 15L12.5 15Z"
      fill="var(--base-shades-50)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon renders correctly with default size and color 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="18px"
    viewBox="0 0 24 24"
    width="18px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.00001 16L4.00001 8L18 8L18 16M20 16.67L20 15L22 15L22 9L20 9L20 7.33C20 6.6 19.4 6 18.67 6L3.33001 6C2.60001 6 2.00001 6.6 2.00001 7.33L2.00001 16.67C2.00001 17.41 2.59001 18 3.33001 18L18.67 18C19.4 18 20 17.4 20 16.67ZM8 15L8 9L5.00001 9L5.00001 15L8 15ZM12.5 15L12.5 9L9.5 9L9.5 15L12.5 15Z"
      fill="var(--base-shades-50)"
    />
  </svg>
</DocumentFragment>
`;
